adding styling to call page

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,22 @@
-My first Sinatra App.
-<script src="https://static.vline.com/vline.js"></script>
-<h1>Does .ERB render like HTML?</h1>
-
-<!-- https://jaredmemaybe.vline.com  -->
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="/stylesheet.css">
+	<!-- https://jared.vline.com -->
+	<script src="https://static.vline.com/vline.js"></script>
+	<title>Who are you gonna call? </title>
+</head>
+<body>
+	<img src="gb.jpg">
+	<div class="media">
+	  <h1>Ghostbuster's Hotline</h1>
+	  <div class="buttons">
+		  <button class="button" id="sign-in">Sign In</button>
+		  <button class="button" id="call">Call</button>
+	  </div>
+	  <video class="video-player" width="320" height="240" controls>
+	    <source src="movie.mp4" type="video/mp4">
+	    <source src="movie.ogg" type="video/ogg">
+	  </video>
+  </div>
+</body>
+</html>
